# agent_trace_sdk

./: .gitignore  justfile  pyproject.toml
.claude/skills/agenttrace/: SKILL.md  cli-reference.md  diagnose.md  error-report.md  perf-check.md  snapshot-diff.md  trace-inspect.md
docs/: agenttrace.html  index.html  search.js
merchant_ops/: __init__.py  app.py  loadgen.py  seed.py
merchant_ops/static/: app.js  index.html  style.css
src/agenttrace/: __init__.py  _utils.py  cli.py  client.py  context.py  monitor.py  query.py  storage.py  types.py
src/agenttrace/instruments/: __init__.py  fastapi_middleware.py  httpx_client.py  logging_bridge.py  sqlalchemy.py
tests/: test_core.py  test_query.py
